--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,7 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
-'on':
+"on":
   push:
     branches:
       - deploy
@@ -10,11 +10,34 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SJUR_PORTFOLIO }}'
+          node-version: "14"
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
+      - name: Set up environment variables
+        run: |
+          echo "REACT_APP_API_KEY=${{ secrets.VITE_REACT_APP_API_KEY }}" >> $GITHUB_ENV
+          echo "REACT_APP_AUTH_DOMAIN=${{ secrets.VITE_REACT_APP_AUTH_DOMAIN }}" >> $GITHUB_ENV
+          echo "REACT_APP_PROJECT_ID=${{ secrets.VITE_REACT_APP_PROJECT_ID }}" >> $GITHUB_ENV
+          echo "REACT_APP_STORAGE_BUCKET=${{ secrets.VITE_REACT_APP_STORAGE_BUCKET }}" >> $GITHUB_ENV
+          echo "REACT_APP_MESSAGING_SENDER_ID=${{ secrets.VITE_REACT_APP_MESSAGING_SENDER_ID }}" >> $GITHUB_ENV
+          echo "REACT_APP_APP_ID=${{ secrets.VITE_REACT_APP_APP_ID }}" >> $GITHUB_ENV
+          echo "REACT_APP_MEASUREMENT_ID=${{ secrets.VITE_REACT_APP_MEASUREMENT_ID }}" >> $GITHUB_ENV
+
+      - name: Deploy to Firebase
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SJUR_PORTFOLIO }}"
           channelId: live
           projectId: sjur-portfolio
