--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,20 +10,8 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "14"
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Build
-        run: npm run build
-
+      - uses: actions/checkout@v3
+      - run: npm ci && npm run build
       - name: Set up environment variables
         run: |
           echo "REACT_APP_API_KEY=${{ secrets.VITE_REACT_APP_API_KEY }}" >> $GITHUB_ENV
