--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,15 +12,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: npm ci && npm run build
-      - name: Set up environment variables
-        run: |
-          echo "REACT_APP_API_KEY=${{ secrets.VITE_REACT_APP_API_KEY }}" >> $GITHUB_ENV
-          echo "REACT_APP_AUTH_DOMAIN=${{ secrets.VITE_REACT_APP_AUTH_DOMAIN }}" >> $GITHUB_ENV
-          echo "REACT_APP_PROJECT_ID=${{ secrets.VITE_REACT_APP_PROJECT_ID }}" >> $GITHUB_ENV
-          echo "REACT_APP_STORAGE_BUCKET=${{ secrets.VITE_REACT_APP_STORAGE_BUCKET }}" >> $GITHUB_ENV
-          echo "REACT_APP_MESSAGING_SENDER_ID=${{ secrets.VITE_REACT_APP_MESSAGING_SENDER_ID }}" >> $GITHUB_ENV
-          echo "REACT_APP_APP_ID=${{ secrets.VITE_REACT_APP_APP_ID }}" >> $GITHUB_ENV
-          echo "REACT_APP_MEASUREMENT_ID=${{ secrets.VITE_REACT_APP_MEASUREMENT_ID }}" >> $GITHUB_ENV
+        env:
+          REACT_APP_API_KEY: ${{ secrets.VITE_REACT_APP_API_KEY }}
+          REACT_APP_AUTH_DOMAIN: ${{ secrets.VITE_REACT_APP_AUTH_DOMAIN }}
+          REACT_APP_PROJECT_ID: ${{ secrets.VITE_REACT_APP_PROJECT_ID }}
+          REACT_APP_STORAGE_BUCKET: ${{ secrets.VITE_REACT_APP_STORAGE_BUCKET }}
+          REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.VITE_REACT_APP_MESSAGING_SENDER_ID }}
+          REACT_APP_APP_ID: ${{ secrets.VITE_REACT_APP_APP_ID }}
+          REACT_APP_MEASUREMENT_ID: ${{ secrets.VITE_REACT_APP_MEASUREMENT_ID }}
 
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
