--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,7 +20,9 @@ jobs:
           REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.VITE_REACT_APP_MESSAGING_SENDER_ID }}
           REACT_APP_APP_ID: ${{ secrets.VITE_REACT_APP_APP_ID }}
           REACT_APP_MEASUREMENT_ID: ${{ secrets.VITE_REACT_APP_MEASUREMENT_ID }}
-
+      - name: Debug Environment Variables
+        run: |
+          echo "VITE_REACT_APP_PROJECT_ID: $VITE_REACT_APP_PROJECT_ID"
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
