--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,13 +13,13 @@ jobs:
       - uses: actions/checkout@v3
       - run: npm ci && npm run build
         env:
-          REACT_APP_API_KEY: ${{ secrets.VITE_REACT_APP_API_KEY }}
-          REACT_APP_AUTH_DOMAIN: ${{ secrets.VITE_REACT_APP_AUTH_DOMAIN }}
-          REACT_APP_PROJECT_ID: ${{ secrets.VITE_REACT_APP_PROJECT_ID }}
-          REACT_APP_STORAGE_BUCKET: ${{ secrets.VITE_REACT_APP_STORAGE_BUCKET }}
-          REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.VITE_REACT_APP_MESSAGING_SENDER_ID }}
-          REACT_APP_APP_ID: ${{ secrets.VITE_REACT_APP_APP_ID }}
-          REACT_APP_MEASUREMENT_ID: ${{ secrets.VITE_REACT_APP_MEASUREMENT_ID }}
+          VITE_REACT_APP_API_KEY: ${{ secrets.VITE_REACT_APP_API_KEY }}
+          VITE_REACT_APP_AUTH_DOMAIN: ${{ secrets.VITE_REACT_APP_AUTH_DOMAIN }}
+          VITE_REACT_APP_PROJECT_ID: ${{ secrets.VITE_REACT_APP_PROJECT_ID }}
+          VITE_REACT_APP_STORAGE_BUCKET: ${{ secrets.VITE_REACT_APP_STORAGE_BUCKET }}
+          VITE_REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.VITE_REACT_APP_MESSAGING_SENDER_ID }}
+          VITE_REACT_APP_APP_ID: ${{ secrets.VITE_REACT_APP_APP_ID }}
+          VITE_REACT_APP_MEASUREMENT_ID: ${{ secrets.VITE_REACT_APP_MEASUREMENT_ID }}
       - name: Debug Environment Variables
         run: |
           echo "VITE_REACT_APP_PROJECT_ID: $VITE_REACT_APP_PROJECT_ID"
