--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,29 +1,42 @@
 name: Deploy to Firebase Hosting on merge
+
 on:
   push:
     branches:
       - deploy
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: npm ci && npm run build
-        env:
-          REACT_APP_API_KEY: ${{ secrets.VITE_REACT_APP_API_KEY }}
-          REACT_APP_AUTH_DOMAIN: ${{ secrets.VITE_REACT_APP_AUTH_DOMAIN }}
-          REACT_APP_PROJECT_ID: ${{ secrets.VITE_REACT_APP_PROJECT_ID }}
-          REACT_APP_STORAGE_BUCKET: ${{ secrets.VITE_REACT_APP_STORAGE_BUCKET }}
-          REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.VITE_REACT_APP_MESSAGING_SENDER_ID }}
-          REACT_APP_APP_ID: ${{ secrets.VITE_REACT_APP_APP_ID }}
-          REACT_APP_MEASUREMENT_ID: ${{ secrets.VITE_REACT_APP_MEASUREMENT_ID }}
-      - name: Debug Environment Variables
-        run: |
-          echo "REACT_APP_PROJECT_ID: $REACT_APP_PROJECT_ID"
-      - name: Deploy to Firebase
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "14"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
+      - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SJUR_PORTFOLIO }}"
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SJUR_PORTFOLIO }}
           channelId: live
           projectId: sjur-portfolio
+
+      - name: Set up environment variables
+        run: |
+          echo "VITE_REACT_APP_API_KEY=${{ secrets.VITE_REACT_APP_API_KEY }}" >> $GITHUB_ENV
+          echo "VITE_REACT_APP_AUTH_DOMAIN=${{ secrets.VITE_REACT_APP_AUTH_DOMAIN }}" >> $GITHUB_ENV
+          echo "VITE_REACT_APP_PROJECT_ID=${{ secrets.VITE_REACT_APP_PROJECT_ID }}" >> $GITHUB_ENV
+          echo "VITE_REACT_APP_STORAGE_BUCKET=${{ secrets.VITE_REACT_APP_STORAGE_BUCKET }}" >> $GITHUB_ENV
+          echo "VITE_REACT_APP_MESSAGING_SENDER_ID=${{ secrets.VITE_REACT_APP_MESSAGING_SENDER_ID }}" >> $GITHUB_ENV
+          echo "VITE_REACT_APP_APP_ID=${{ secrets.VITE_REACT_APP_APP_ID }}" >> $GITHUB_ENV
+          echo "VITE_REACT_APP_MEASUREMENT_ID=${{ secrets.VITE_REACT_APP_MEASUREMENT_ID }}" >> $GITHUB_ENV
